# Audiyour

./: .gitignore  .gitmodules  README.md  links.txt
embedded/: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
embedded/main/: CMakeLists.txt  ble_gatt.h  bt_init.c  bt_init.h  eq_iir_filter.c  eq_iir_filter.h  equalizer2.c  equalizer2.h  gatt.c  gatt.h  globals.c  globals.h  main.c  main.cpp  mixer.c  mixer.h  mixer2.c  mixer2.h  mycomp.c  mycomp.h  pipeline.c  pipeline.h  profile.c  profile.h  util.c  util.h
filter_design/: gen_equalizer_filters.m  write_filter_coeff.m
flutter_app/myapp/: README.md  pubspec.yaml
flutter_app/myapp/android/: .gitignore
flutter_app/myapp/android/app/: build.gradle
flutter_app/myapp/android/app/src/main/: AndroidManifest.xml
flutter_app/myapp/lib/: audio_control_screen.dart  main.dart
flutter_app/myapp/web/: index.html  manifest.json
gui_qt/: README.md  bluetoothManager.py  bluetoothManager_old.py  equalizer.py  jumpSlider.py  main.py  mixer.py  requirements.txt  test2.py
