idf_component_register(SRCS "eq_iir_filter.c" "equalizer2.c" "main.cpp"
                            "mixer.c"
                            "gatt.c"
                            "pipeline.c"
                            "globals.c"
                            "equalizer2.c"
                            "eq_iir_filter.c"
                            "mixer2.c"
                    INCLUDE_DIRS ".")
