idf_component_register(SRCS "eq_iir_filter.c" "equalizer2.c" "main.c"
                            "gatt.c"
                            "pipeline.c"
                            "util.c"
                            "equalizer2.c"
                            "eq_iir_filter.c"
                            "mixer2.c"
                            "profile.c"
                    INCLUDE_DIRS ".")
