idf_component_register(SRCS "eq_iir_filter.c" "equalizer2.c" "main.c"
                            "gatt.c"
                            "pipeline.c"
                            "util.c"
                            "equalizer2.c"
                            "eq_iir_filter.c"
                            "mixer.c"
                            "profile.c"
                            "bt_init.c"
                    INCLUDE_DIRS ".")
